--- a/src/Components/LoginSignup/LoginSignup.css
+++ b/src/Components/LoginSignup/LoginSignup.css
@@ -94,3 +94,15 @@
         background: white;
         color: #6b6a6b;
     }
+
+.corner-button {
+    padding: 10px 20px;
+    background-color: #ff5722; /* Change color as needed */
+    color: #fff;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+    position: absolute;
+    top: 10px;
+    right: 10px;
+}
