added admin panel and manage account panel

--- a/src/Components/SearchTableComponent/SearchTableComponent.css
+++ b/src/Components/SearchTableComponent/SearchTableComponent.css
@@ -1,5 +1,6 @@
 .container {
     text-align: center;
+    align-items: center;
     margin-top: 50px;
 }
 
@@ -9,6 +10,8 @@ h1 {
 }
 
 .search-bar {
+    display: flex;
+    align-items: center;
     padding: 8px;
     margin-bottom: 20px;
     width: 300px;
