--- a/src/Components/Home/Home.css
+++ b/src/Components/Home/Home.css
@@ -44,3 +44,15 @@
     top: 10px;
     right: 10px;
 }
+
+.corner-button-2 {
+    padding: 10px 20px;
+    background-color: #ff5722; /* Change color as needed */
+    color: #fff;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+    position: absolute;
+    top: 60px;
+    right: 10px;
+}
