amended admin panel and manage account pages

--- a/src/Components/AdminPanel/AdminPanel.css
+++ b/src/Components/AdminPanel/AdminPanel.css
@@ -1,40 +1,21 @@
-/* AdminPanel.css */
-.admin-panel {
+.root {
+    text-align: center;
+}
+
+.root .MuiTextField-root,
+.root .MuiButton-root {
+    margin: 10px;
+}
+
+.root table {
+    margin: 10px auto;
+}
+
+.container{
     display: flex;
-}
-
-.sidebar {
-    width: 250px;
-    background-color: #333;
-    color: white;
-}
-
-.sidebar-menu {
-    list-style: none;
-    padding: 0;
-}
-
-.menu-item {
-    padding: 10px;
-    cursor: pointer;
-}
-
-.menu-item:hover {
-    background-color: #555;
-}
-
-.menu-item.active {
-    background-color: #555;
-}
-
-.main-content {
-    flex: 1;
-    padding: 20px;
-}
-
-.content-section {
-    background-color: #f9f9f9;
-    padding: 20px;
-    border-radius: 8px;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    flex-direction: column;
+    margin: auto;
+    margin-top: 200px;
+    background: #fff;
+    padding-bottom: 30px;
 }
