--- a/src/index.css
+++ b/src/index.css
@@ -6,7 +6,11 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   height: 100vh;
-  background: linear-gradient(#FFFFFF, #000000);
+  background-color: white;
+  background-image: url("Components/Assets/landing_small.jpg");
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
 }
 
 code {
