--- a/src/Components/GamePanel/GamePanel.css
+++ b/src/Components/GamePanel/GamePanel.css
@@ -6,7 +6,7 @@
 
 .button-play {
     padding: 30px 60px; /* Increase the padding for larger buttons */
-    background-color: #00b7ff;
+    background-color: #436aad;
     color: #fff;
     border: none;
     border-radius: 5px;
