--- a/src/Components/LoginSignup/LoginSignup.css
+++ b/src/Components/LoginSignup/LoginSignup.css
@@ -1,13 +1,14 @@
-.container{
+.container-log{
     display: flex;
     flex-direction: column;
     margin: auto;
-    margin-top: 200px;
-    background: #fff;
-    padding-bottom: 30px;
+    margin-top: 100px;
+    background: gray;
+    text-align: center;
+    align-items: center;
 }
 
-.header{
+.header-log{
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -16,16 +17,16 @@
     margin-top: 30px;
 }
 
-.text{
-    color: #61dafb;
+.text-log{
+    color: #f4c329;
     font-size: 48px;
     font-weight: 700;
 }
 
-.underline{
+.underline-log{
     width: 61px;
     height: 6px;
-    background: #8284ff;
+    background: #b09a54;
     border-radius: 9px;
 }
 
@@ -61,14 +62,21 @@
 }
 
 .forgot-password{
-    padding-left: 62px;
+    padding-left: 10px;
     margin-top: 27px;
-    color: gray;
+    color: white;
+    font-size: 18px;
+}
+
+.bad-password{
+    padding-left: 10px;
+    margin-top: 27px;
+    color: red;
     font-size: 18px;
 }
 
 .forgot-password span{
-    color: #a75dff;
+    color: #f4c329;
     cursor: pointer;
 }
 
@@ -85,7 +93,7 @@
     width: 220px;
     height: 59px;
     color: #fff;
-    background: #8284ff;
+    background: #b09a54;
     font-size: 19px;
     font-weight: 700;
     cursor: pointer;
@@ -94,15 +102,3 @@
         background: white;
         color: #6b6a6b;
     }
-
-.corner-button {
-    padding: 10px 20px;
-    background-color: #ff5722; /* Change color as needed */
-    color: #fff;
-    border: none;
-    border-radius: 5px;
-    cursor: pointer;
-    position: absolute;
-    top: 10px;
-    right: 10px;
-}
