--- a/src/Components/Game/Game.css
+++ b/src/Components/Game/Game.css
@@ -28,6 +28,7 @@
 .square-container {
     display: flex;
     justify-content: space-around;
+    margin-bottom: 20px;
 }
 
 .square {
@@ -41,6 +42,11 @@
     font-weight: bold;
     font-size: 16px;
     margin-right: 10px;
+}
+
+.hidden {
+    visibility: hidden;
+    height: 40px;
 }
 
 .MATCH {
