--- a/src/Components/AdminPanel/AdminPanel.css
+++ b/src/Components/AdminPanel/AdminPanel.css
@@ -1,21 +1,63 @@
-.root {
+.container {
     text-align: center;
+    align-items: center;
+    margin-top: 50px;
 }
 
-.root .MuiTextField-root,
-.root .MuiButton-root {
-    margin: 10px;
-}
-
-.root table {
-    margin: 10px auto;
-}
-
-.container{
+.header{
     display: flex;
     flex-direction: column;
-    margin: auto;
-    margin-top: 200px;
-    background: #fff;
-    padding-bottom: 30px;
+    align-items: center;
+    gap: 9px;
+    width: 100%;
+    margin-top: 30px;
+}
+
+.text-ad{
+    color: #2e2e2e;
+    font-size: 48px;
+    font-weight: 700;
+}
+
+.underline-ad{
+    width: 61px;
+    height: 6px;
+    background: #000000;
+    border-radius: 9px;
+}
+
+h1 {
+    font-size: 24px;
+    margin-bottom: 20px;
+}
+
+.search-bar {
+    display: flex;
+    align-items: center;
+    padding: 8px;
+    margin-bottom: 20px;
+    width: 300px;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+}
+
+.table {
+    border-collapse: collapse;
+    width: 70%;
+    margin: 0 auto;
+}
+
+th,
+td {
+    border: 1px solid #ddd;
+    padding: 8px;
+}
+
+th {
+    background-color: #f2f2f2;
+}
+
+.gamelink{
+    text-decoration: none;
+    color: black;
 }
